<resources>
    <string name="app_name">莫尔斯编码器</string>
    <string name="input_title">请在这里输入电文</string>
    <string name="output_title">莫尔斯码</string>
    <string name="btnCode_name">编码</string>
    <string name="toggleBtnFormat_name">ToggleButtonFormat</string>
    <string name="toggleBtnFormat_textOff">标准电文</string>
    <string name="toggleBtnFormat_textOn">电报电文</string>
    <string name="btnPlay">播放</string>
    <string name="btnMakeFile">制成音频文件</string>
    <string name="toggleBtnSpeed_textOff">慢</string>
    <string name="toggleBtnSpeed_textOn">快</string>
    <string name="toggleBtnSpeed_name">toggleBtnSpeed</string>
    <string name="toggleBtnLong_textOff">短码</string>
    <string name="toggleBtnLong_textOn">长码</string>
    <string name="toggleBtnLong_name">toggleBtnLong</string>
    <string name="regExpPattern">[^0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ ]</string>
    <string name="storage_rationale">本APP运行必须取得写权限</string>
</resources>
