<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.example.wxson.morsetoy.MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/input_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/output_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:drawable/editbox_background"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        tools:labelFor="@+id/editText" />

    <Button
        android:id="@+id/btnCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btnCode_name"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp" />

    <ToggleButton
        android:id="@+id/toggleBtnFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/toggleBtnFormat_name"
        android:textOff="@string/toggleBtnFormat_textOff"
        android:textOn="@string/toggleBtnFormat_textOn"
        app:layout_constraintRight_toRightOf="parent" />

    <ToggleButton
        android:id="@+id/toggleBtnSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggleBtnSpeed_name"
        android:textOff="@string/toggleBtnSpeed_textOff"
        android:textOn="@string/toggleBtnSpeed_textOn"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewMorse"
        app:layout_constraintLeft_toRightOf="@+id/btnPlay" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPlay"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewMorse" />

    <ToggleButton
        android:id="@+id/toggleBtnLong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/toggleBtnLong_name"
        android:textOff="@string/toggleBtnLong_textOff"
        android:textOn="@string/toggleBtnLong_textOn"
        android:visibility="invisible"
        app:layout_constraintRight_toLeftOf="@+id/toggleBtnFormat"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewMorse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_background"
        android:fadingEdge="horizontal|vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCode" />

    <Button
        android:id="@+id/btnMakeFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnMakeFile"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMorse" />

</android.support.constraint.ConstraintLayout>
